--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <link rel="stylesheet" href="main.css">
         <title>The Memoirs of sycTK</title>
     </head>
-    
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
@@ -18,9 +17,9 @@
                   <div class="collapse navbar-collapse" id="navbarMenu">
                     <ul class = "navbar-nav">
                         <li><a class="nav-link active" href="/">Home</a></li>
-                        <li><a class="nav-link" href="/blog">Blog</a></li>
-                        <li><a class="nav-link" href="/projects">Projects</a></li>
-                        <li><a class="nav-link" href="/about">About</a></li>
+                        <li><a class="nav-link" href="/blog/">Blog</a></li>
+                        <li><a class="nav-link" href="/projects/">Projects</a></li>
+                        <li><a class="nav-link" href="/about/">About</a></li>
                     </ul>
                 </div>
             </div>
@@ -28,7 +27,7 @@
 
         <div class="container">
             <h1 class="title">The Memoirs of sycTk</h1>
-            <h2>Hey there! </h2>
+            <h2>Hey there!</h2>
             <p>Thanks for taking the time to visit my website.</p>
             <p>I hope you enjoy your stay here and hopefully find something that piques your interest. </p>
             <img src="casey-horner-p69o_a7XqDM-unsplash.jpg" width="560" height="621" alt="Picutre of a train">
